--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
     <header></header>
         <main class="container">  <!-- Container flexível -->
             <section class="container-bloco">
-                <h1 class="container-titulo">BuLoVa!</h1>
+                <h1 class="container-titulo">Projeto One!</h1>
                 <p class="container-texto">
-                    A santinha perdeu o juízo,tomou uma e já ficou louca Quando bebe, ela é um perigo <strong class="container-destaque">Sai beijando de boca em boca</strong>
+                   Aqui você pode ver e ter acesso ao primeiro projeto front-end que pude executar. No atual momento estou aprendendo HTML e CSS.<br>
+                   <strong class="container-destaque">Estou empolgado com minha evolução!</strong>
                 </p> 
                 <div class="container-link">
+                    <h2 class="container-subtitulo">Acesse Minhas Redes:</h2>
                     <a class="botao-links" href="https://instagram.com/vittokinha">Instagram</a>
                     <a class="botao-links" href="https://instagram.com/vittokinha">Traducao</a>
                 </div>
