Atualiza estilo ou conteúdo

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <section class="container-bloco">
                 <h1 class="container-titulo">Projeto One!</h1>
                 <p class="container-texto">
-                   Aqui você pode ver e ter acesso ao primeiro projeto front-end que pude executar. No atual momento estou aprendendo HTML e CSS.<br>
+                   Aqui você pode conferir e ter acesso ao meu primeiro projeto front-end que estou executando com Html e Css através do curso da Alura.<br>
                    <strong class="container-destaque">Estou empolgado com minha evolução!</strong>
                 </p> 
                 <div class="container-link">
