Atualiza estilo ou conteúdo

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
                 </p> 
                 <div class="container-link">
                     <h2 class="container-subtitulo">Acesse Minhas Redes:</h2>
-                    <a class="botao-links" href="https://instagram.com/vittokinha">Instagram</a>
-                    <a class="botao-links" href="https://instagram.com/vittokinha">Traducao</a>
+                    <a class="botao-links" href="https://instagram.com/vicopaes">Instagram</a>
+                    <a class="botao-links" href="https://www.linkedin.com/in/paesvictor">Linkedin</a>
                 </div>
             </section>
             <img src="aluralogo.jpeg" alt="logo">
