--- a/about.html
+++ b/about.html
@@ -11,10 +11,26 @@
         <nav class="cabecalho-menu">
             <a class="cabecalho-menu-link" href="./index.html">Home</a>
             <a class="cabecalho-menu-link" href="./about.html">Sobre Mim</a>
-            <a class="cabecalho-menu-link" href="./portfolio.html">Portfolio</a>
         </nav>
     </header>
-    <main></main>
+    <main class="container">
+        <section class="container-bloco">
+            <h1 class="container-titulo"> Quem é Victor?</h1>
+            <p class="container-texto"> 35 anos, morando em São Paulo.<br>
+                 Designer especializado em Motion Designer, com mais de 10 anos de experiência em animação, edição de vídeo e artes gráficas.<br>
+                 <strong class="container-destaque">Atualmente estou em transição para área de front-end.</strong></p>
+            <div class="container-link">
+                    <h2 class="container-subtitulo">Acesse Minhas Redes:</h2>
+                    <a class="botao-links" href="https://instagram.com/vicopaes">
+                        <img src="./assets/instagram.png" alt="Instagram"> Instagram
+                    </a>
+                    <a class="botao-links" href="https://www.linkedin.com/in/paesvictor">
+                        <img src="./assets/linkedin.png" alt="Linkedin"> Linkedin
+                    </a>
+            </div>
+        </section>
+        <img class="foto-apresentacao" src="./assets/Victor.jpeg" alt="foto-apresentacao">
+    </main>
     <footer class="rodape">
         <p> Desenvolvido por @Vicopaes </p>
     </footer>
