Atualiza estilo ou conteúdo

--- a/about.html
+++ b/about.html
@@ -32,7 +32,8 @@
         <img class="foto-apresentacao" src="./assets/Victor.jpeg" alt="foto-apresentacao">
     </main>
     <footer class="rodape">
-        <p> Desenvolvido por @Vicopaes </p>
+        <p> Desenvolvido por <a class="desenvolvedor" href="//instagram.com/vicopaes">@Vicopaes</a> 
+        </p>
     </footer>
 </body>
 </html>
