--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
             <img src="./assets/aluralogo.jpeg" alt="logo">
         </main>   
         <footer class="rodape">
-            <p> Desenvolvido por @Vicopaes </p>
-        </footer>
+        <p> Desenvolvido por <a class="desenvolvedor" href="//instagram.com/vicopaes">@Vicopaes</a> 
+        </p>
+    </footer>
 </body>
 </html>
