Atualiza estilo ou conteúdo

--- a/about.html
+++ b/about.html
@@ -16,9 +16,10 @@
     <main class="container">
         <section class="container-bloco">
             <h1 class="container-titulo"> Quem é Victor?</h1>
-            <p class="container-texto"> 35 anos, morando em São Paulo.<br>
-                 Designer especializado em Motion Designer, com mais de 10 anos de experiência em animação, edição de vídeo e artes gráficas.<br>
-                 <strong class="container-destaque">Atualmente estou em transição para área de front-end.</strong></p>
+            <p class="container-texto"> 
+                É um Designer especializado em Motion Designer, de 36 anos, em busca de novas oportunidades na área.
+                Recomeçando a vida em São Paulo, está atualmente se dedicando os estudos<br>
+                 <strong class="container-destaque"> em Front-End, UX e UI Design </strong>, consciente da força e do dinamismo do setor tecnológico, ele está determinado a se tornar um profissional cada vez mais completo.</p>
             <div class="container-link">
                     <h2 class="container-subtitulo">Acesse Minhas Redes:</h2>
                     <a class="botao-links" href="https://instagram.com/vicopaes">
