--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <h1 class="container-titulo">Projeto One!</h1>
                 <p class="container-texto">
                    Aqui você pode conferir e ter acesso ao meu primeiro projeto front-end que estou executando com Html e Css através do curso da Alura.<br>
-                   <strong class="container-destaque">Estou empolgado com minha evolução!</strong>
+                   <strong class="container-destaque">Estou animado com a minha evolução!</strong>
                 </p> 
             </section>
             <img src="./assets/aluralogo.jpeg" alt="logo">
